--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://ewnjlwwtpuzcbskypoue.supabase.co/storage/v1/object/public/assets/overeasy-favicon.ico"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://ewnjlwwtpuzcbskypoue.supabase.co/storage/v1/object/public/assets/overeasy-favicon.ico"
+    />
     <title>Overeasy</title>
   </head>
   <body>
